build/apps/longhorn/base/resources/namespace.yaml
apiVersion: v1
kind: Namespace
# metadata:
#   annotations:
#     argocd.argoproj.io/sync-options: Prune=true
  creationTimestamp: null
  name: longhorn-system
spec: {}
status: {}
