build/apps/longhorn/base/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`longhorn.anotherlife.pl`)
      services:
        - kind: TraefikService
          name: longhorn-frontend
