build/apps/longhorn/base/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  labels:
    app.kubernetes.io/name: longhorn-frontend #longhorn-ui
  annotations:
    cert-manager.io/cluster-issuer: route53-letsencrypt-staging
    kubernetes.io/ingress.class: traefik-external
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "-2"

spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
      #match: Host(`hello.<secret:private-domain>`)
    match: Host(`longhorn.anotherlife.pl`)
    services:
      - kind: Service
        name: longhorn-frontend
        port: 80
        namespace: longhorn-system
    middlewares:
      - name: headers #traefik-dashboard-auth  #chain-traefik-dashboard
        namespace: traefik
  tls:
    #secretName: letsencrypt-staging
    options:
      name: tls-ver13
      namespace: traefik
    domains:
      - main: anotherlife.pl
        sans:
          - .anotherlife.pl
